rust/surrealdb-macros/src/snapshots/surrealdb_macros__query_define_token__tests__define_token_statement_on_scope.snap
---
source: surrealdb-macros/src/query_define_token.rs
expression: token_def.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "oyelowo_token",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'oyelowo_token'",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "abcde",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'abcde'",
    },
]
